@@ -18,6 +18,7 @@ Coccinella-0.95.16 (200701??):
  o added SOCKS proxy, compatible with SimpLite-Jabber
  o cleaner groupchat dialog with new methods to set subject and nickname
  o added collapsable and flexible toolbars
+ o chat subject now set by pressing Return in subject field
 
 Coccinella-0.95.15 (20061117):
 
